--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <title>gRPC Web Devtools</title>
+    <title>gRPC Devtools</title>
 
     <link rel="icon" href="/icon.png" />
 
